--- a/.github/workflows/update-last9-mcp.yml
+++ b/.github/workflows/update-last9-mcp.yml
@@ -2,7 +2,7 @@ name: Update Last9 MCP Formula
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # Run every 6 hours
+    - cron: '0 */1 * * *'  # Run every hour
   workflow_dispatch:  # Allow manual trigger
   repository_dispatch:
     types: [update-last9-mcp]
